add notify
